Add stable patches from ERPyA